Update 'vm6cf01e2-go' component image to: quay.io/rhtap_qe/rhtap-qe-go:d3164ebbacca1ad77a9de4b1342db027096b2d1f@sha256:0fa6022d1932a4b9c66ba7ecbff0b7c3768aa801bb644c164a5596efba52dfe5

--- a/components/vm6cf01e2-go/overlays/development/deployment-patch.yaml
+++ b/components/vm6cf01e2-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: vm6cf01e2-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-go:d3164ebbacca1ad77a9de4b1342db027096b2d1f@sha256:0fa6022d1932a4b9c66ba7ecbff0b7c3768aa801bb644c164a5596efba52dfe5
+          name: container-image
